--- a/src/components/RepoTile/RepoTile.css
+++ b/src/components/RepoTile/RepoTile.css
@@ -16,9 +16,11 @@
 }
 .git-repo-tile__info-text {
     font-size: 14px;
-    color: var(--colorHint);    
+    color: var(--colorHint); 
+    text-decoration: none;   
     font-weight: 400;    
 }
+
 .git-repo-tile__org-link:hover {
     color: var(--linkHover);
 }
